force-app/main/default/objects/WSM_DW_Alert_Threshold__c/WSM_DW_Alert_Threshold__c.object-meta.xml
<CustomObject>
    <description>Consumption levels that trigger a Digital Wallet alert. Read by the WSM - Digital Wallet Alerts scheduled flow. Only one alert fires per card per run — the highest threshold the card has crossed — so adding rows changes which level is reported, not how many alerts are sent.</description>
    <label>Digital Wallet Alert Threshold</label>
    <nameField>
        <displayFormat>DWT-{0000}</displayFormat>
        <label>Threshold Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Wallet Alert Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>