force-app/main/default/objects/WSM_DW_Alert_Threshold__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to stop this threshold firing without deleting the record. The 100 percent threshold cannot be deactivated — it drives prepaid overage alerts.</description>
    <inlineHelpText>Uncheck to disable this threshold without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>