force-app/main/default/objects/WSM_DW_Alert_Threshold__c/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <description>The consumption level that fires the alert. Read as a percentage when Trigger Type is Percent consumed, and as a raw unit count when it is Units consumed.</description>
    <inlineHelpText>For Percent consumed, enter 1 to 100. For Units consumed, enter the raw number of units.</inlineHelpText>
    <label>Threshold Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>