force-app/main/default/objects/WSM_DW_Alert_Threshold__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <description>Whether this threshold compares against percent consumed or raw units consumed. The API values must stay exactly ThresholdPercent and ThresholdUnits — the flow compares them against the Digital Wallet alert trigger type constants.</description>
    <inlineHelpText>Percent consumed applies to cards that report an entitlement. Units consumed applies to cards that do not.</inlineHelpText>
    <label>Trigger Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ThresholdPercent</fullName>
                <default>true</default>
                <label>Percent consumed</label>
            </value>
            <value>
                <fullName>ThresholdUnits</fullName>
                <label>Units consumed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>